--- a/_includes/analytics-providers/google-gtag.html
+++ b/_includes/analytics-providers/google-gtag.html
@@ -6,4 +6,5 @@
   gtag('js', new Date());
 
   gtag('config', 'G-M295RN079Y');
+  gtag('config', '{{site.analytics.google.G-M295RN079Y}}');
 </script>
